[gd_scene load_steps=9 format=3 uid="uid://wdfrwopsgurh"]

[ext_resource type="Script" path="res://levels/Button.gd" id="1_glwq7"]
[ext_resource type="AudioStream" uid="uid://dtn3c8vtdub3c" path="res://assets/zapsplat_vehicles_car_dash_button_press_toyota_corolla_2017_002_79114.mp3" id="2_0x4x2"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_s1dm4"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_86orb"]
albedo_color = Color(0.913725, 0.827451, 0.882353, 1)
emission_enabled = true
emission = Color(1, 0, 0.278431, 1)
emission_energy_multiplier = 0.5

[sub_resource type="CylinderShape3D" id="CylinderShape3D_icqre"]
radius = 1.5

[sub_resource type="Animation" id="Animation_gd824"]
resource_name = "ButtonRise"
length = 9.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pillar/ButtonMesh:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 9.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0.75279, 0), Vector3(0, 0.65, 0), Vector3(0, 0.75279, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pillar/ButtonMesh:material:emission_energy_multiplier")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 9.4, 9.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.5, 0.0, 0.0, 0.5]
}

[sub_resource type="Animation" id="Animation_u6j4k"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pillar/ButtonMesh:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.75, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pillar/ButtonMesh:material:emission_energy_multiplier")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_67065"]
_data = {
"ButtonRise": SubResource("Animation_gd824"),
"RESET": SubResource("Animation_u6j4k")
}

[node name="Button" type="Node3D"]
script = ExtResource("1_glwq7")

[node name="Pillar" type="CSGCylinder3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.7, 0)
use_collision = true
radius = 0.25
height = 1.4
sides = 6
material = SubResource("StandardMaterial3D_s1dm4")

[node name="ButtonMesh" type="CSGCylinder3D" parent="Pillar"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 0)
radius = 0.2
height = 0.1
sides = 6
material = SubResource("StandardMaterial3D_86orb")

[node name="SpotLight3d" type="SpotLight3D" parent="Pillar"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 4.08265, 0)
shadow_enabled = true
spot_range = 10.522
spot_angle = 13.981

[node name="Area3d" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="CollisionShape3d" type="CollisionShape3D" parent="Area3d"]
shape = SubResource("CylinderShape3D_icqre")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_67065")
}

[node name="SoundButton" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_0x4x2")
bus = &"SFX"

[connection signal="body_entered" from="Area3d" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3d" to="." method="_on_area_3d_body_exited"]
